--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,11 +86,11 @@ jobs:
         7z a OpenDirectoryDownloader-${{ steps.get_version.outputs.VERSION }}-${{ matrix.target }}${{ matrix.suffix }}.zip ./OpenDirectoryDownloader-${{ steps.get_version.outputs.VERSION }}-${{ matrix.target }}${{ matrix.suffix }}/*
         # 7z is installed in all environments and supports unix permissions while compressing (but not while decompressing!)
 
-    - name: Upload artifact for docker job (linux-x64 normal only)
-      if: ${{ matrix.target == 'linux-x64' && matrix.self-contained == 'normal' }}
+    - name: Upload artifact for docker job (linux only)
+      if: ${{ matrix.os == 'ubuntu-latest' && matrix.self-contained == 'normal' }}
       uses: actions/upload-artifact@v2
       with:
-        name: linux-x64
+        name: ${{ matrix.target }}
         path: |
           OpenDirectoryDownloader-${{ steps.get_version.outputs.VERSION }}-${{ matrix.target }}${{ matrix.suffix }}.zip
           src/Dockerfile
@@ -132,21 +132,36 @@ jobs:
 
   docker:
     needs: build
-    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        target: 
+          - linux-x64
+          - linux-arm
+          - linux-arm64
+        include:
+          - target: linux-x64
+            os: ubuntu-latest
+          - target: linux-arm
+            os: ubuntu-latest
+          - target: linux-arm64
+            os: ubuntu-latest
+
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Get version info
         id: get_version
         run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/v}
 
-      - name: Download artifact linux-x64
+      - name: Download artifact 
         uses: actions/download-artifact@v2
         with:
-          name: linux-x64
+          name: ${{ matrix.os }}
 
-      - name: Decompress artifact linux-x64
+      - name: Decompress artifact
         uses: TonyBogdanov/zip@1.0
         with:
-            args: unzip -qq ./OpenDirectoryDownloader-${{ steps.get_version.outputs.VERSION }}-linux-x64.zip -d ./app
+            args: unzip -qq ./OpenDirectoryDownloader-${{ steps.get_version.outputs.VERSION }}-${{ matrix.os }}.zip -d ./app
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
