--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -141,13 +141,13 @@ jobs:
           - linux-arm64
         include:
           - target: linux-x64
-            os: ubuntu-latest
+            platform: linux/amd64
           - target: linux-arm
-            os: ubuntu-latest
+            platform: linux/arm/v7
           - target: linux-arm64
-            os: ubuntu-latest
+            platform: linux/arm64
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
       - name: Get version info
         id: get_version
@@ -162,6 +162,9 @@ jobs:
         uses: TonyBogdanov/zip@1.0
         with:
             args: unzip -qq ./OpenDirectoryDownloader-${{ steps.get_version.outputs.VERSION }}-${{ matrix.target }}.zip -d ./app
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -182,6 +185,7 @@ jobs:
         with:
           context: .
           file: ./src/Dockerfile
+          platform: ${{ matrix.platform }}
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/opendirectorydownloader:latest
