--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -185,7 +185,7 @@ jobs:
         with:
           context: .
           file: ./src/Dockerfile
-          platform: ${{ matrix.platform }}
+          platforms: ${{ matrix.platform }}
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/opendirectorydownloader:latest
