--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -187,6 +187,27 @@ jobs:
           file: ./src/Dockerfile
           platforms: ${{ matrix.platform }}
           push: true
-          tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/opendirectorydownloader:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/opendirectorydownloader:${{ steps.tag_info.outputs.SOURCE_TAG }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/opendirectorydownloader:${{ matrix.target }}
+
+  combine:
+    needs: docker
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Combine images
+        run: >
+          docker buildx imagetools create
+          -t ${{ secrets.DOCKERHUB_USERNAME }}/opendirectorydownloader:latest
+          -t ${{ secrets.DOCKERHUB_USERNAME }}/opendirectorydownloader:${{ steps.tag_info.outputs.SOURCE_TAG }}
+          ${{ secrets.DOCKERHUB_USERNAME }}/opendirectorydownloader:linux-x64
+          ${{ secrets.DOCKERHUB_USERNAME }}/opendirectorydownloader:linux-arm
+          ${{ secrets.DOCKERHUB_USERNAME }}/opendirectorydownloader:linux-arm64
+
